[package]
name = "rust_bls"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.39.1"
#tokio = { version = "1.10.1", features = ["full"] }
env_logger = "0.9.0"
futures = "0.3.16"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13.0"
rust-crypto = "0.2"
rand = "0.7"
hex = "0.4"
serde_derive = "1.0.106"
xor_name = "2.0.0"
jsonrpc-http-server = "18.0.0"
blst = "0.3.4"
local-ip-address = "0.4.4"
datadog-logs = "0.2.1"
async-trait="0.1.51"
datadog-apm = "0.2"
tokio = {version = "0.2"}